feat: implemented CRUD Operations for events
