# controller/event_controller.go
@@ -3,6 +3,7 @@ package controller
 import (
 	"context"
 
+	"github.com/google/uuid"
 	"github.com/soner3/evently/model"
 	eventv1 "github.com/soner3/evently/proto/gen/event/v1"
 	"google.golang.org/protobuf/types/known/timestamppb"
@@ -14,6 +15,9 @@ type EventController struct {
 
 func (e *EventController) CreateEvent(_ context.Context, req *eventv1.CreateEventRequest) (*eventv1.CreateEventResponse, error) {
 	event := model.NewEvent(req.GetName(), req.GetDescription(), req.GetLocation(), req.GetDateTime().AsTime())
+	event.EventId = uuid.New()
+	event.UserId = uuid.New()
+	model.Events[event.EventId.String()] = *event
 	return &eventv1.CreateEventResponse{
 		EventId:     event.EventId.String(),
 		Name:        event.Name,
@@ -22,4 +26,61 @@ func (e *EventController) CreateEvent(_ context.Context, req *eventv1.CreateEven
 		DateTime:    timestamppb.New(event.DateTime),
 		UserId:      event.UserId.String(),
 	}, nil
+}
+
+func (e *EventController) DeleteEvent(ctx context.Context, req *eventv1.DeleteEventRequest) (*eventv1.DeleteEventResponse, error) {
+	delete(model.Events, req.GetEventId())
+	return &eventv1.DeleteEventResponse{
+		Message: "Deleted",
+	}, nil
+}
+
+func (e *EventController) GetAllEvents(ctx context.Context, req *eventv1.GetAllEventsRequest) (*eventv1.GetAllEventsResponse, error) {
+	events := make([]*eventv1.Event, 0, len(model.Events))
+	for _, e := range model.Events {
+		events = append(events, &eventv1.Event{
+			EventId:     e.EventId.String(),
+			Name:        e.Name,
+			Description: e.Description,
+			Location:    e.Location,
+			DateTime:    timestamppb.New(e.DateTime),
+			UserId:      e.UserId.String(),
+		})
+	}
+	return &eventv1.GetAllEventsResponse{
+		Events: events,
+	}, nil
+}
+
+func (e *EventController) GetEvent(ctx context.Context, req *eventv1.GetEventRequest) (*eventv1.GetEventResponse, error) {
+	event := model.Events[req.GetEventId()]
+	return &eventv1.GetEventResponse{
+		EventId:     event.EventId.String(),
+		Name:        event.Name,
+		Description: event.Description,
+		Location:    event.Location,
+		DateTime:    timestamppb.New(event.DateTime),
+		UserId:      event.UserId.String(),
+	}, nil
+
+}
+
+func (e *EventController) UpdateEvent(ctx context.Context, req *eventv1.UpdateEventRequest) (*eventv1.UpdateEventResponse, error) {
+	event := model.Events[req.GetEventId()]
+	event.Name = req.GetName()
+	event.Description = req.GetDescription()
+	event.Location = req.GetDescription()
+	event.DateTime = req.GetDateTime().AsTime()
+	event.UserId = uuid.MustParse(req.GetUserId())
+	model.Events[event.EventId.String()] = event
+
+	return &eventv1.UpdateEventResponse{
+		EventId:     event.EventId.String(),
+		Name:        event.Name,
+		Description: event.Description,
+		Location:    event.Location,
+		DateTime:    timestamppb.New(event.DateTime),
+		UserId:      event.UserId.String(),
+	}, nil
+
 }
